# chunker

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: chunk.rs  main.rs  manifest.rs  patch.rs  publish.rs  r2.rs
